[ADD] Frame formater pour convertions vers I420 (pour webrtc) et inversement, script d'installation de libyuv, adaptation de LocalVideo pour afficher le flux vidéo et l'envoyer vers webrtc

--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,6 @@ downloads/*.zip
 # =====================
 # Ignore everything
 TeamsClient_/third_party/webrtc/**
+TeamsClient_/third_party/libyuv/**
 
 # But keep README and build scripts
-!TeamsClient_/third_party/webrtc/README.md
-!TeamsClient_/third_party/webrtc/*.sh
